Fase 2: configurado jacoco y añadida covertura basica